# axum-single-page-application-example

./: Cargo.toml  Makefile  README.md
frontend/: package-lock.json
src/: main.rs
