[package]
name = "axum-single-page-application-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.4.8" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
